# eugene

./: README.md
eugene/: .gitignore  AUTHORS  CMakeLists.txt  CREATE_LINKS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  RELEASE  configure  configure.ac  eugeneK.kdev4
eugene/Procedures/Dev/: MakeTarball.sh  sensor_plugin_builder.pl
eugene/Procedures/Eval/: egn_evalpred.pl  evalpred.pl  qd_evalgff3pred.pl
eugene/Procedures/Format/: ParamParser.pm  coord2gff.pl  coordspliter.pl  egn_joiner.pl  gff2coord.awk  verif_coord.pl
eugene/Procedures/Format/EuGeneAdapt/: eugeneAdapt.pl  gffUtils.pm
eugene/Procedures/Get/: egn_compseq.pl  egn_getATGpr4eugene.pl  egn_getFGENESH4eugene.pl  egn_getRepeat4eugene.pl  egn_getsites4eugene.pl  egn_leugene.pl  getATGpr4eugene.pl  getFGENESH4eugene.pl  getRepeat4eugene.pl  getsites4eugene.pl  leugene.pl
eugene/Test/: README  TestDoc.tex
eugene/Test/Outputs/: Output_ATGpr  Output_AnnotaStruct  Output_Araset  Output_Araset_SpSn  Output_Big  Output_BlastX  Output_Est  Output_EstNonCanSite  Output_EuStop  Output_FrameShift  Output_GCPlot  Output_GFF  Output_GSplicer  Output_Homology  Output_IfElse  Output_MarkovConst  Output_MarkovIMM  Output_MarkovProt  Output_NG2  Output_NStart  Output_NcRNA  Output_Optimization  Output_PatConst  Output_PepSignal  Output_Plotter  Output_ProOverlapGene  Output_ProOverlapGene.gff3  Output_ProStart  Output_Repeat  Output_Riken  Output_SMachine  Output_SPred  Output_SeqAlt  Output_SeqAlt_test  Output_SeqAra  Output_SeqAra_test  Output_SeqDoc  Output_SeqDoc_test  Output_SeqHom  Output_SeqHom_test  (+9 more)
eugene/Test/Sequences/: SMc.1541000-1552500.fasta.blast0  chr1_2002.tfa_22540000-23040000.tfa  chr1_2002.tfa_22540000-23040000.tfa.Gsplicer  chr1_2002.tfa_22540000-23040000.tfa.blast0  chr1_2002.tfa_22540000-23040000.tfa.blast1  chr1_2002.tfa_22540000-23040000.tfa.est  chr1_2002.tfa_22540000-23040000.tfa.ig  chr1_2002.tfa_22540000-23040000.tfa.riken  chr1_2002.tfa_22540000-23040000.tfa.spliceP  chr1_2002.tfa_22540000-23040000.tfa.splicePR  chr1_2002.tfa_22540000-23040000.tfa.starts  chr1_2002.tfa_22540000-23040000.tfa.startsR  exSeqHom.fasta  exSeqHom.fasta.gff  exSeqHom.fasta.tblastx  seq14ac002535g4g5.tfa  seq14ac002535g4g5.tfa.Gsplicer  seq14ac002535g4g5.tfa.Gsplicer.gff3  seq14ac002535g4g5.tfa.atgpr  seq14ac002535g4g5.tfa.atgprR  seq14ac002535g4g5.tfa.blast0  seq14ac002535g4g5.tfa.blast0.gff3  seq14ac002535g4g5.tfa.est  seq14ac002535g4g5.tfa.est.gff3  seq14ac002535g4g5.tfa.est2  seq14ac002535g4g5.tfa.est2.gff3  seq14ac002535g4g5.tfa.gff  seq14ac002535g4g5.tfa.gff.gff3  seq14ac002535g4g5.tfa.ig.gff3  seq14ac002535g4g5.tfa.ncrna.gff3  seq14ac002535g4g5.tfa.psignal  seq14ac002535g4g5.tfa.psignal.gff3  seq14ac002535g4g5.tfa.riken.gff3  seq14ac002535g4g5.tfa.spliceM.gff3  seq14ac002535g4g5.tfa.spliceMAD  seq14ac002535g4g5.tfa.spliceMSt  seq14ac002535g4g5.tfa.spliceP  seq14ac002535g4g5.tfa.spliceP.gff3  seq14ac002535g4g5.tfa.splicePR  seq14ac002535g4g5.tfa.splices  (+26 more)
eugene/Test/TestSuite/: Arabidopsis.exp  Functionals.exp  Optimization.exp  Units.exp  UnitsGff3.exp  qd_comp_matrix.pl
eugene/Test/config/: GenerateOutputs.tcl  TestProc.tcl  TestVar.tcl  default.exp
eugene/cfg/: araclean50.par  araclean80.par  eugene.combine.par  eugene.par  eugene_prok.par  sofa.obo
eugene/doc/: ADD_PLUGIN  Doc.tex  Doc_ATGpr.tex  Doc_AnnotaStruct.tex  Doc_BlastX.tex  Doc_Est.tex  Doc_EuStop.tex  Doc_FrameShift.tex  Doc_GCPlot.tex  Doc_GFF.tex  Doc_GSplicer.tex  Doc_Homology.tex  Doc_IfElse.tex  Doc_MarkovConst.tex  Doc_MarkovIMM.tex  Doc_MarkovProt.tex  Doc_NG2.tex  Doc_NStart.tex  Doc_NStretch.tex  Doc_NcRNA.tex  Doc_PatConst.tex  Doc_PepSignal.tex  Doc_Plotter.tex  Doc_ProStart.tex  Doc_Repeat.tex  Doc_RibosomalFrameShift.tex  Doc_Riken.tex  Doc_SMachine.tex  Doc_SPred.tex  Doc_SpliceWAM.tex  Doc_StartWAM.tex  Doc_Tester.tex  Doc_Transcript.tex  Doc_User.tex  Fiches.tex  GenerateDoc.tcl  Makefile.am  PCCSC.tex  ParaOptimization.fig
eugene/doc/Models/Bouml/: 128002  128002.diagram  128898  129282.diagram  129410.diagram  129666  130562.diagram  132866.diagram  2.session  Bouml.prj
eugene/doc/Sequences/: SMc.1541000-1552500.fasta  SMc.1541000-1552500.fasta.blast1
eugene/models/: Sm.mat  euk.codontable  eupl.codontable  intron_euplotes.dist  overlap_prok.dist  pro.codontable  rna_prok.dist  uir_prok.dist  utr.dist  utr_prok.dist
eugene/plugins/: Makefile.am
eugene/singularity/4.3/: README.md
eugene/src/: AltEst.cc  AltEst.h  Attributes.cc  Attributes.h  BackP.cc  BackP.h  Const.h  DAG.cc  DAG.h  DNASeq.cc  DNASeq.h  Dll.cc  Dll.h  EuGene.cc  Gap.cc  Gap.h  GeneFeature.cc  GeneFeature.h  GeneFeatureSet.cc  GeneFeatureSet.h  Gff3Line.cc  Gff3Line.h  Hits.cc  Hits.h  Locus.cc  Locus.h  MSensor.cc  MSensor.h  Makefile.am  Output.cc  Output.h  Param.cc  Param.h  PenaltyDist.cc  PenaltyDist.h  Prediction.cc  Prediction.h  Prediction_cte.h  Sensor.cc  Sensor.h  (+10 more)
eugene/src/GDIF/: Makefile.am  gdIF.c  gdIF.h
eugene/src/Parametrization/: Chromosome.cc  Chromosome.h  CrossingOver.cc  CrossingOver.h  Genetic.cc  Genetic.h  LineSearch.cc  LineSearch.h  Makefile.am  Mutating.cc  Mutating.h  OptiAlgorithm.cc  OptiAlgorithm.h  ParaOptimization.cc  ParaOptimization.h  Random.cc  Random.h  Scaling.cc  Scaling.h  Selecting.cc  Selecting.h  Sharing.cc  Sharing.h  SimulatedAnnealing.cc  SimulatedAnnealing.h
eugene/src/SensorPlugins/: Makefile.am
eugene/src/SensorPlugins/0_SensorTk/: BStrArray.cc  BStrArray.h  EndianConv.h  Makefile.am  WAM.cc  WAM.h  markov.cc  markov.h
eugene/src/SensorPlugins/ATGpr/: Makefile.am  Sensor.ATGpr.cc  Sensor.ATGpr.h
eugene/src/SensorPlugins/AnnotaStruct/: Makefile.am  Sensor.AnnotaStruct.cc  Sensor.AnnotaStruct.h
eugene/src/SensorPlugins/BlastX/: Makefile.am  Sensor.BlastX.cc  Sensor.BlastX.h
eugene/src/SensorPlugins/Est/: Makefile.am  Sensor.Est.cc  Sensor.Est.h
eugene/src/SensorPlugins/EuStop/: Makefile.am  Sensor.EuStop.cc  Sensor.EuStop.h
eugene/src/SensorPlugins/User/: lex.l  (+5 more)
eugene/vm/: Dockerfile.centos  Dockerfile.debian  Dockerfile.ubuntu  readme
(+131 files in other folders)
